@@ -4040,17 +4040,17 @@ Save changes?</source>
 <context>
     <name>MidiControllerModel</name>
     <message>
-        <location filename="../midiwidget.cpp" line="77"/>
+        <location filename="../midiwidget.cpp" line="83"/>
         <source>Module</source>
         <translation>Module</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="78"/>
+        <location filename="../midiwidget.cpp" line="84"/>
         <source>MIDI Controller / Parameter</source>
         <translation>Contrôleur MIDI / Paramètre</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="64"/>
+        <location filename="../midiwidget.cpp" line="70"/>
         <source>Type: %1 Channel: %2 Param: %3</source>
         <translation>Type: %1 Canal: %2 Param: %3</translation>
     </message>
@@ -4058,102 +4058,102 @@ Save changes?</source>
 <context>
     <name>MidiWidget</name>
     <message>
-        <location filename="../midiwidget.cpp" line="262"/>
+        <location filename="../midiwidget.cpp" line="264"/>
         <source>&amp;Log</source>
         <translation>&amp;Log</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="268"/>
+        <location filename="../midiwidget.cpp" line="270"/>
         <source>Set Mi&amp;n</source>
         <translation>Définir Mi&amp;n</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="273"/>
+        <location filename="../midiwidget.cpp" line="275"/>
         <source>Set Ma&amp;x</source>
         <translation>Définir Ma&amp;x</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="278"/>
+        <location filename="../midiwidget.cpp" line="280"/>
         <source>&amp;Reset Min/Max</source>
         <translation>&amp;Réinitialiser Min/Max</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="290"/>
+        <location filename="../midiwidget.cpp" line="293"/>
         <source>Omni</source>
         <translation>Omni</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="299"/>
+        <location filename="../midiwidget.cpp" line="302"/>
         <source>MIDI C&amp;hannel:</source>
         <translation>Canal &amp;MIDI:</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="313"/>
+        <location filename="../midiwidget.cpp" line="316"/>
         <source>Add to &amp;Parameter View</source>
         <translation>Ajouter à la Vue &amp;Paramètres</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="326"/>
+        <location filename="../midiwidget.cpp" line="329"/>
         <source>&amp;Enable note events</source>
         <translation>Activer les &amp;Evênements de Notes</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="330"/>
+        <location filename="../midiwidget.cpp" line="332"/>
         <source>&amp;Follow Configuration Dialog</source>
         <translation>Suivre &amp;Fenêtre de Configuration</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="334"/>
+        <location filename="../midiwidget.cpp" line="335"/>
         <source>Follow &amp;MIDI</source>
         <translation>Suivre entrée &amp;MIDI</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="346"/>
+        <location filename="../midiwidget.cpp" line="339"/>
         <source>&amp;Bind</source>
         <translation>&amp;Relier</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="351"/>
+        <location filename="../midiwidget.cpp" line="344"/>
         <source>&amp;Clear Binding</source>
         <translation>&amp;Séparer</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="356"/>
+        <location filename="../midiwidget.cpp" line="349"/>
         <source>Clear &amp;All</source>
         <translation>&amp;Tout Séparer</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="360"/>
+        <location filename="../midiwidget.cpp" line="353"/>
         <source>&amp;Toggle MIDI Sign</source>
         <translation>&amp;Inverser Signe MIDI</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="511"/>
+        <location filename="../midiwidget.cpp" line="504"/>
         <source>This will erase all presets for this configuration. Continue?</source>
         <translation>Ceci effacera tous les presets pour cette configuration. Continuer?</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="522"/>
+        <location filename="../midiwidget.cpp" line="515"/>
         <source>Add this parameter to frame:</source>
         <translation>Ajouter ce paramètre au cadre:</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="537"/>
+        <location filename="../midiwidget.cpp" line="530"/>
         <source>Frame &apos;%1&apos; does not exist. Create?</source>
         <translation>Le cadre &apos;%1&apos; n&apos;existe pas. Créer?</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="544"/>
+        <location filename="../midiwidget.cpp" line="537"/>
         <source>Add frame to tab:</source>
         <translation>Ajouter le cadre à l&apos;onglet:</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="558"/>
+        <location filename="../midiwidget.cpp" line="551"/>
         <source>Tab &apos;%1&apos; does not exist. Create?</source>
         <translation>L&apos;onglet &apos;%1&apos; n&apos;existe pas. Créer?</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="584"/>
+        <location filename="../midiwidget.cpp" line="577"/>
         <source>Parameter name:</source>
         <translation>Nom du paramètre:</translation>
     </message>
@@ -4232,12 +4232,12 @@ Save changes?</source>
 <context>
     <name>ModuleModel</name>
     <message>
-        <location filename="../midiwidget.cpp" line="173"/>
+        <location filename="../midiwidget.cpp" line="179"/>
         <source>MIDI Sign</source>
         <translation>Signe MIDI</translation>
     </message>
     <message>
-        <location filename="../midiwidget.cpp" line="173"/>
+        <location filename="../midiwidget.cpp" line="179"/>
         <source>Module / Parameter</source>
         <translation>Module / Paramètre</translation>
     </message>
